# MLOps_lab1_hw

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
api/: app.py
api/models/: sentiment.py
api/services/: inference.py
test/: test_endpoints.py  test_model.py
